Implemented sources for addresses and filters